jenkins-pipeline/unused/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: notes-app
spec:
  rules:
    - host: notes-app.tuyojr.me
      http:
        paths:
          - backend:
              serviceName: notes-app-deployment
              servicePort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: sock-shop
  namespace: sock-shop
spec:
  rules:
    - host: sock-shop.tuyojr.me
      http:
        paths:
          - backend:
              serviceName: front-end
              servicePort: 80
